feat(brain): Shooty — Completion Guard wird zum Guard-System mit Points
CompletionGuardService → ShootyGuardService, GuardTrigger → GuardPoint.
Neue Points neben dem unveränderten Yield-Punkt (STOP/TERMINATE):

- START (runStartGuards): einmal pro echtem User-Turn, nach
  resetIfUserTurn — das Skript entscheidet selbst (typische Aktion:
  vance.guard.activateSkill, auto-trigger-artig, greift am selben Turn;
  'einmal pro Process'-Flags in sessionValues, der Loop-Scratch wird pro
  User-Turn gewischt). Fail-open. Wiring: StructuredActionEngine
  (Arthur/Eddie) + FrankieEngine.runTurn nach drainPending.
- COMMAND (gateCommand): Gate im EngineCommandDispatcher vor handle.
  deny(reason) oder Skript-Fehler ⇒ Command failed hart, fail-closed
  (EngineCommandResult.deniedByGuard); SkillCommandRunner bricht die
  Rest-Sequenz ab (auch deactivate-Cleanup — ein Veto ist kein transienter
  Handler-Fehler). Exempt: Verb 'guard' (Abschaltweg //guard clear) und
  der Re-Entranz-Marker.

Re-Entranz: InheritableThreadLocal-Marker um jeden Guard-Lauf — der Guard
bewacht sich nicht selbst (LightLm-Calls, Activate-Sequenzen bypassen das
COMMAND-Gate; gespawnte Children laufen normal, eigenes Recipe).

Surface vance.guard.* neu: point, command ({name,args}), deny,
activateSkill; Point-fremde Aktionen werfen ScriptHostException.
Scratch-Stores bleiben per Process/Session keyed — geteilt über alle
Points. maxRounds nur am Yield-Punkt ausgewertet (START läuft einmal pro
Turn, COMMAND einmal pro Command, Backstop dort: Skript-Timeout).
Recipe-YAML: trigger-Wertebereich start|command|stop|terminate|both,
Feldname unverändert.

Tests: ShootyGuardServiceTest (27, inkl. START/COMMAND/Re-Entranz),
GuardScriptExecutionTest (8, echtes GraalJS), SkillCommandRunnerTest (neu),
RecipeLoaderTest (+2 Trigger-Parsing), ScriptGuardApiTest erweitert.